--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.1.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "fs": "^0.0.1-security",
+    "googleapis": "^111.0.0",
+    "lemmatizer": "^0.0.1",
+    "natural": "^6.2.0",
+    "nlp_compromise": "^7.0.0",
+    "node-nlp": "^4.26.1",
+    "path": "^0.12.7",
+    "python-shell": "^5.0.0",
+    "subtitle-converter": "^3.0.12",
+    "youtube-dl-exec": "^2.3.1"
   }
 }
