--- a/.gitignore
+++ b/.gitignore
@@ -107,19 +107,14 @@ dist
 .tern-port
 
 # ignore all files and directories within myfolder
-json_subtitle/*
-
-# but keep the myfolder directory itself
-!json_subtitle/
+src/subtitle/json_subtitle/*
+!src/subtitle/json_subtitle/
 
 # ignore all files and directories within myfolder
-subtitleVTT/*
+src/subtitle/subtitleVTT/*
+!src/subtitle/subtitleVTT/
 
-# but keep the myfolder directory itself
-!subtitleVTT/
 
 # ignore all files and directories within myfolder
-wordAndIndexInFolders/*
-
-# but keep the myfolder directory itself
-!wordAndIndexInFolders/
+src/subtitle/wordAndIndexInFolders/*
+!src/subtitle/wordAndIndexInFolders/
